--- a/Server/src/view/CompanyListView.fxml
+++ b/Server/src/view/CompanyListView.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="318.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.CompanyListViewController">
+<AnchorPane prefHeight="400.0" prefWidth="318.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.CompanyListViewController">
    <children>
       <TableView fx:id="companyList" layoutX="44.0" layoutY="28.0" prefHeight="247.0" prefWidth="231.0">
         <columns>
@@ -16,7 +12,7 @@
           <TableColumn fx:id="priceColumn" prefWidth="115.0" text="current price" />
         </columns>
       </TableView>
-      <HBox alignment="CENTER" layoutY="329.0" prefHeight="71.0" prefWidth="318.0" spacing="70.0">
+      <HBox alignment="CENTER" layoutX="1.0" layoutY="302.0" prefHeight="43.0" prefWidth="318.0" spacing="70.0">
          <children>
             <Button mnemonicParsing="false" onAction="#onBack" text="Back">
                <font>
@@ -30,7 +26,7 @@
             </Button>
          </children>
       </HBox>
-      <Label fx:id="errorLabel" layoutX="116.0" layoutY="289.0" text="Error Label" textFill="RED">
+      <Label fx:id="errorLabel" layoutX="116.0" layoutY="275.0" text="Error Label" textFill="RED">
          <font>
             <Font size="18.0" />
          </font>
