--- a/Server/src/view/PlaceOrder.fxml
+++ b/Server/src/view/PlaceOrder.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="500.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.PlaceOrderController">
+<VBox prefHeight="500.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.PlaceOrderController">
    <children>
       <VBox prefHeight="52.0" prefWidth="650.0">
          <children>
@@ -110,6 +110,7 @@
                         <Insets left="240.0" />
                      </HBox.margin>
                   </Button>
+                  <Button mnemonicParsing="false" onAction="#Portfolio" text="Portfolio" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
