Fixed merge with master

--- a/Server/src/view/AccountView.fxml
+++ b/Server/src/view/AccountView.fxml
@@ -55,7 +55,7 @@
          <children>
             <HBox spacing="5.0">
                <children>
-                  <Button mnemonicParsing="false" text="Company list" />
+                  <Button mnemonicParsing="false" onAction="#onList" text="Company list" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
