--- a/Server/src/view/AccountView.fxml
+++ b/Server/src/view/AccountView.fxml
@@ -56,6 +56,7 @@
             <HBox spacing="5.0">
                <children>
                   <Button mnemonicParsing="false" onAction="#onList" text="Company list" />
+                  <Button mnemonicParsing="false" onAction="#onPlaceOrder" text="Place Order" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -64,6 +65,7 @@
             <HBox spacing="5.0">
                <children>
                   <Button mnemonicParsing="false" onAction="#onPortfolio" text="Portfolio" />
+                  <Button mnemonicParsing="false" text="Order List" />
                   <Button mnemonicParsing="false" onAction="#onWithdraw" text="Withdraw cash" />
                   <Button mnemonicParsing="false" onAction="#onAdd" text="Add cash" />
                </children>
