--- a/Server/src/view/CompanyView.fxml
+++ b/Server/src/view/CompanyView.fxml
@@ -1,46 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="213.0" prefWidth="633.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.CompanyViewController">
+<VBox xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.CompanyViewController">
    <children>
-      <HBox layoutY="8.0" prefHeight="53.0" prefWidth="633.0">
+      <HBox>
          <children>
-            <HBox alignment="CENTER" prefHeight="53.0" prefWidth="217.0">
+            <VBox prefHeight="200.0" prefWidth="316.0">
                <children>
-                  <Label fx:id="nameLabel" text="Name">
-                     <font>
-                        <Font size="33.0" />
-                     </font>
-                  </Label>
+                  <HBox prefHeight="53.0" prefWidth="633.0">
+                     <children>
+                        <Label fx:id="nameLabel" text="Company">
+                           <font>
+                              <Font size="33.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Current price:">
+                           <font>
+                              <Font size="33.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="53.0" prefWidth="414.0" spacing="30.0">
+            </VBox>
+            <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Label text="Current price:">
-                     <font>
-                        <Font size="33.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="priceLabel" text="price">
-                     <font>
-                        <Font size="33.0" />
-                     </font>
-                  </Label>
+                  <HBox prefHeight="53.0" prefWidth="100.0">
+                     <children>
+                        <Label text="Symbol" />
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="priceLabel" text="price">
+                           <font>
+                              <Font size="33.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
+            </VBox>
          </children>
       </HBox>
-      <HBox alignment="CENTER" layoutY="91.0" prefHeight="69.0" prefWidth="633.0">
+      <LineChart fx:id="historyChart" title="History">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </LineChart>
+      <HBox alignment="CENTER" prefHeight="69.0" prefWidth="633.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#backOnAction" prefHeight="49.0" prefWidth="90.0" text="Back">
-               <font>
-                  <Font size="26.0" />
-               </font>
-            </Button>
+            <Button mnemonicParsing="false" onAction="#onOrder" text="Place order" />
+            <Button mnemonicParsing="false" onAction="#onBack" text="Back" />
          </children>
       </HBox>
    </children>
-</AnchorPane>
+</VBox>
