--- a/Server/src/view/LoginView.fxml
+++ b/Server/src/view/LoginView.fxml
@@ -1,55 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-
-<VBox prefHeight="322.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.LoginViewController">
+<VBox prefHeight="340.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.LoginViewController">
    <children>
-      <HBox alignment="CENTER" prefHeight="70.0" prefWidth="450.0">
+      <VBox alignment="CENTER" prefHeight="70.0" prefWidth="61.0">
          <children>
             <Label text="Login">
                <font>
-                  <Font size="33.0" />
+                  <Font size="22.0" />
                </font>
             </Label>
          </children>
-      </HBox>
-      <HBox prefHeight="155.0" prefWidth="450.0">
+      </VBox>
+      <VBox>
          <children>
-            <VBox alignment="CENTER" prefHeight="155.0" prefWidth="232.0" spacing="20.0">
+            <HBox alignment="CENTER">
                <children>
-                  <Label text="Username:">
+                  <Label prefWidth="110.0" text="Username:">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Label text="Password:">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="133.0" prefWidth="190.0" spacing="20.0">
-               <children>
                   <TextField fx:id="usernameField" onAction="#onLogin" />
+               </children>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </HBox>
+            <HBox alignment="CENTER">
+               <children>
+                  <Label prefWidth="110.0" text="Password:">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
                   <PasswordField fx:id="passwordField" onAction="#onLogin" />
                </children>
-            </VBox>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </HBox>
          </children>
-      </HBox>
+      </VBox>
       <HBox alignment="CENTER">
          <children>
-            <Label fx:id="errorLabel" prefHeight="17.0" prefWidth="400.0" text="error label" textFill="RED">
+            <Label fx:id="errorLabel" alignment="TOP_LEFT" prefHeight="61.0" prefWidth="400.0" text="error label" textFill="RED" wrapText="true">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
          </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
       </HBox>
-      <HBox alignment="CENTER" prefHeight="72.0" prefWidth="450.0" spacing="150.0">
+      <HBox alignment="CENTER" prefHeight="72.0" prefWidth="450.0" spacing="50.0">
          <children>
             <Button mnemonicParsing="false" onAction="#onLogin" text="Login">
                <font>
