--- a/Server/src/view/CompanyView.fxml
+++ b/Server/src/view/CompanyView.fxml
@@ -35,7 +35,7 @@
                <children>
                   <HBox prefHeight="53.0" prefWidth="100.0">
                      <children>
-                        <Label text="Symbol" />
+                        <Label fx:id="symbolLabel" text="Symbol" />
                      </children>
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0">
