Changing: Updating counting of stocks for user. Starting to implement function on client site

--- a/Server/src/view/AccountView.fxml
+++ b/Server/src/view/AccountView.fxml
@@ -18,6 +18,7 @@
                   <MenuItem mnemonicParsing="false" onAction="#onWithdraw" text="Withdraw money" />
                   <MenuItem mnemonicParsing="false" onAction="#onAdd" text="Add money" />
                   <MenuItem mnemonicParsing="false" onAction="#onLogout" text="Logout" />
+                 <MenuItem mnemonicParsing="false" onAction="#onorderList" text="OrderList" />
                   <MenuItem mnemonicParsing="false" onAction="#onQuit" text="Quit" />
               </items>
             </MenuButton>
