fixing problem that in placing order d and f was considered as "float",so that it would be valid input.

--- a/Client/src/view/PlaceOrder.fxml
+++ b/Client/src/view/PlaceOrder.fxml
@@ -9,7 +9,7 @@
    <children>
       <VBox prefHeight="52.0" prefWidth="650.0">
          <children>
-            <Label text="Place order  (Buy or sell or both?)">
+            <Label text="Place order">
                <font>
                   <Font size="30.0" />
                </font>
